--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -1,4 +1,5 @@
 <div class="row">
+  <!--
   <div class="col-md-6">
     <h3 id="syllabus-shell">The Unix Shell</h3>
     <ul>
@@ -24,7 +25,6 @@
       <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Reference...</a></li>
     </ul>
   </div>
-  <!--
   <div class="col-md-6">
     <h3 id="syllabus-r">Programming in R</h3>
     <ul>
@@ -50,6 +50,7 @@
      </ul>
    </div>
    -->
+<!--
 </div>
 
 <div class="row">
@@ -81,7 +82,19 @@
       <li><a href="{{site.swc_pages}}/sql-novice-survey/reference">Reference...</a></li>
     </ul>
   </div>
-    <!--
+  -->
+    <div class="col-md-6">
+    <h3 id="syllabus-spread">Data Organization with Spreadsheets</h3>
+    <ul>
+      <li>Formatting data tables in Spreadsheets</li>
+      <li>Formatting problems</li>
+      <li>Dates as Data</li>
+      <li>Quality assurance</li>
+      <li>Exporting data</li>
+      <li><a href="{{site.swc_pages}}/spreadsheets-socialsci">Reference...</a></li>
+    </ul>
+  </div>
+  
   <div class="col-md-6">
     <h3 id="syllabus-r">Open Refine</h3>
     <ul>
@@ -91,5 +104,38 @@
       <li>Advanced Functions</li>
       <li><a href="{{site.lc_pages}}library-openrefine/reference">Reference...</a></li>
     </ul>
-  </div>-->
+  </div>
+
+    <div class="col-md-6">
+    <h3 id="syllabus-spread">R for Social Scientists</h3>
+    <ul>
+      <li>Introduction to R</li>
+      <li>Starting with Data</li>
+      <li>Introducing dplyr and tidyr</li>
+      <li>Data visualization with ggplot2</li>
+      <li><a href="{{site.swc_pages}}/r-socialsci">Reference...</a></li>
+    </ul>
+  </div>  
+  
+  <div class="col-md-6">
+    <h3 id="syllabus-sql">Managing Data with SQL</h3>
+    <ul>
+      <li>Reading and Sorting Data</li>
+      <li>Filtering with <code>where</code></li>
+      <li>Calculating New Values on the Fly</li>
+      <li>Handling Missing Values</li>
+      <li>Combining Values Using Aggregation</li>
+      <li>Combining Information From Multiple Tables Using <code>join</code></li>
+      <li>Creating, Modifying, and Deleting Data</li>
+      <li>Programming with Databases</li>
+      <li><a href="{{site.swc_pages}}/sql-novice-survey/reference">Reference...</a></li>
+    </ul>
+  </div>
+
+
 </div>
+
+
+
+
+
